--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
