feat: integrate Firebase for dynamic contact information and update services
- Added Firebase dependency to package.json for real-time database functionality.
- Implemented dynamic fetching of contact information in Contact and Footer components using Firebase.
- Updated the ServicesSection to display new services including Pre-IPO shares and Tax Planning.
- Modified the Hero and TrackRecord components to reflect updated statistics.
- Adjusted the CSS for ServicesSection to accommodate a new grid layout.
- Created a new firebase.js file for Firebase initialization and database access.
- Added data.json to structure contact info, social links, business hours, and SEO metadata.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "firebase": "^12.7.0",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
