--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "firebase": "^12.9.0",
+    "helmet": "^8.1.0",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
